@@ -28,6 +28,7 @@ Feature wishes:
 - PR#4444: new String.trim function, removing leading and trailing whistespace
 - PR#4898: new Sys.big_endian boolean for machine endianness
 - PR#5236: new '%revapply' primitive with the semantics 'revapply x f = f x'
+- ocamldebug: ability to inspect values containing code pointers
 
 Objective Caml 3.12.1:
 ----------------------
